--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.1.0",
     "express": "^4.16.4",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "node-cron": "^2.0.3",
-    "node-wifi": "^2.0.5",
+    "node-wifi": "^2.0.12",
     "request": "^2.88.0",
     "requestretry": "^4.0.0",
     "socket.io": "^2.2.0",
